--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   uuid: ^2.0.2
+  equatable: ^0.6.1
+  flutter_bloc: ^1.0.0
+  bloc: ^1.0.0
 
 dev_dependencies:
   flutter_test:
